--- a/templates/article.html
+++ b/templates/article.html
@@ -1,8 +1,8 @@
 //= includes/_header.html
 
 <div class="width">
-    <div class="breadcrumb-cont">
-        <div class="breadcrumb mb0">
+    <div class="float-cont breadcrumb-cont">
+        <div class="breadcrumb fleft mb0">
             <span class="level-up pl20"><a href="" class="bread-current">Назад</a></span>
         </div>
     </div>
