--- a/templates/brand.html
+++ b/templates/brand.html
@@ -80,7 +80,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -118,7 +118,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -180,7 +180,7 @@
 					<div class="p20 float-cont">
 						<div class="line">
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -218,7 +218,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -256,7 +256,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -294,7 +294,7 @@
 
 						<div class="line">
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -332,7 +332,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -370,7 +370,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -408,7 +408,7 @@
 
 						<div class="line">
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -446,7 +446,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -484,7 +484,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -531,7 +531,7 @@
 							<a href="" class="page">3</a>
 							<a href="" class="page">Следующая</a>
 						</div>
-						<div class="fright"><a href="" class="top-page">Наверх</a></div>
+						<div class="fright"><a href="" class="top-page s-scroll" data-scroll="top">Наверх</a></div>
 					</div>
 				</div>
 
