--- a/templates/card_complex.html
+++ b/templates/card_complex.html
@@ -1,8 +1,8 @@
 //= includes/_header.html
 
 	<div class="width">
-		<div class="breadcrumb-cont">
-			<div class="breadcrumb mb0">
+		<div class="float-cont breadcrumb-cont">
+			<div class="breadcrumb fleft mb0">
 				<a href="" class="bread">Главная</a><span class="sep">/</span>
 				<a href="" class="bread">Собаки</a><span class="sep">/</span>
 				<a href="" class="bread">Сухой корм</a><span class="sep">/</span>
@@ -45,7 +45,7 @@
 								</div>
 								<div class="marker-avaliable">В наличии</div>
 							</div>
-							<div class="card-complex-item no-aval">
+							<div class="card-complex-item no-aval mr0">
 								<div class="card-complex-bg">
 									<div class="card-complex-value">5 кг</div>
 									<div class="card-complex-price">3600 Р</div>
@@ -80,7 +80,5 @@
 	</div>
 
 //= includes/_footer.html
-
-//= includes/_card_layers.html
 
 //= includes/_log_reg_layers.html
