--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -40,7 +40,7 @@
 				<div class="small-section">
 					<div class="section-title">
 						<span class="section-title-txt">Все для</span>
-						<img class="title-ico" alt="" src="static/images/ico/dog2.png">
+						<img class="title-ico" alt="" src="static/images/ico/title-dog.png">
 						<span class="section-title-txt right">собак</span>
 					</div>
 				</div>
@@ -151,7 +151,7 @@
 			<div class="s-tabs-boxes" data-tabs="catalog">
 				<div class="tab-box tab-box_top selected float-cont">
 					<div class="catalog-item">
-						<div class="quick-view-btn">
+						<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 							<span class="qv"></span>Быстрый просмотр
 						</div>
 						<div class="catalog-item-img">
@@ -189,7 +189,7 @@
 					<div class="catalog-sep"></div>
 
 					<div class="catalog-item">
-						<div class="quick-view-btn">
+						<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 							<span class="qv"></span>Быстрый просмотр
 						</div>
 						<div class="catalog-item-img">
@@ -227,7 +227,7 @@
 					<div class="catalog-sep"></div>
 
 					<div class="catalog-item">
-						<div class="quick-view-btn">
+						<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 							<span class="qv"></span>Быстрый просмотр
 						</div>
 						<div class="catalog-item-img">
