--- a/templates/catalog_breed.html
+++ b/templates/catalog_breed.html
@@ -40,7 +40,7 @@
 					<div class="small-section">
 						<div class="section-title">
 							<span class="section-title-txt">Все для</span>
-							<img class="title-ico" alt="" src="static/images/ico/dog2.png">
+							<img class="title-ico" alt="" src="static/images/ico/title-dog.png">
 							<span class="section-title-txt right">собак</span>
 						</div>
 					</div>
@@ -65,13 +65,13 @@
 				<div class="sh catalog subcatalog show-category">
 					<div class="subcatalog-title float-cont">
 						<div class="fleft"><h2>Корма для Малой аппенинской гончей</h2></div>
-						<div class="fright"><a href="filter.htlm">Все корма для Малой аппенинской гончей</a></div>
+						<div class="fright"><a href="#">Все корма для Малой аппенинской гончей</a></div>
 					</div>
 
 					<div class="p20 float-cont">
 						<div class="line">
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -109,7 +109,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -147,7 +147,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -188,13 +188,13 @@
 				<div class="sh catalog subcatalog show-category">
 					<div class="subcatalog-title float-cont">
 						<div class="fleft"><h2>Здоровье для Малой аппенинской гончей</h2></div>
-						<div class="fright"><a href="filter.htlm">Все товары для здоровья для Малой аппенинской гончей</a></div>
+						<div class="fright"><a href="#">Все товары для здоровья для Малой аппенинской гончей</a></div>
 					</div>
 
 					<div class="p20 float-cont">
 						<div class="line">
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -232,7 +232,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -270,7 +270,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
