--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="mb25">
                         <p class="semibold mb5">Дополнительные вопросы</p>
-                        <a href="mailto:info@teenyweeny.ru" class="blue">info@teenyweeny.ru></a>
+                        <a href="mailto:info@teenyweeny.ru" class="blue">info@teenyweeny.ru</a>
                     </div>
                 </div>
                 <div class="filter-block plr20 mb20 s-filter-block">
@@ -73,15 +73,14 @@
                         </p>
                         <p>
                             <span class="semibold">Телефон:</span>
-                            +7(495) 643 11 09</span>
+                            <span class="def-color">+7(495) 643 11 09</span>
                         </p>
                         <p>
                             <span class="semibold">Факс:</span>
                             <span class="def-color">+7(495) 643 11 08</span>
                         </p>
                     </div>
-                    <a href="#" class="filter_link blue dashed s-filter" data-open-text="Посмотреть реквизиты" data-close-text="Скрыть реквизиты">Посмотреть реквизиты</span>
-                    </a>
+                    <a href="#" class="filter_link blue dashed s-filter" data-open-text="Посмотреть реквизиты" data-close-text="Скрыть реквизиты">Посмотреть реквизиты</a>
                 </div>
                 <div class="filter-block mb5 s-filter-block">
                     <p class="semibold plr20 mb5">Как нас найти</p>
