--- a/templates/encyclopedia.html
+++ b/templates/encyclopedia.html
@@ -21,7 +21,7 @@
             <div class="sh p20 mb40">
                 <div class="float-cont mb20">
                     <form class="search-block full">
-                        <input type="text" class="search-input dark" placeholder="Найти в блоге" />
+                        <input type="text" class="search-input dark" placeholder="Найти в энциклопедии" />
                         <input type="submit" class="search-sub" value=""/>
                     </form>
                 </div>
