--- a/templates/filter.html
+++ b/templates/filter.html
@@ -157,7 +157,7 @@
 				<div class="p20 float-cont">
 					<div class="line">
 						<div class="catalog-item">
-							<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview1">
+							<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 								<span class="qv"></span>Быстрый просмотр
 							</div>
 							<div class="catalog-item-img">
@@ -195,7 +195,7 @@
 						<div class="catalog-sep"></div>
 
 						<div class="catalog-item">
-							<div class="quick-view-btn">
+							<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 								<span class="qv"></span>Быстрый просмотр
 							</div>
 							<div class="catalog-item-img">
@@ -233,7 +233,7 @@
 						<div class="catalog-sep"></div>
 
 						<div class="catalog-item">
-							<div class="quick-view-btn">
+							<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 								<span class="qv"></span>Быстрый просмотр
 							</div>
 							<div class="catalog-item-img">
@@ -271,7 +271,7 @@
 
 					<div class="line">
 						<div class="catalog-item">
-							<div class="quick-view-btn">
+							<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 								<span class="qv"></span>Быстрый просмотр
 							</div>
 							<div class="catalog-item-img">
@@ -309,7 +309,7 @@
 						<div class="catalog-sep"></div>
 
 						<div class="catalog-item">
-							<div class="quick-view-btn">
+							<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 								<span class="qv"></span>Быстрый просмотр
 							</div>
 							<div class="catalog-item-img">
@@ -347,7 +347,7 @@
 						<div class="catalog-sep"></div>
 
 						<div class="catalog-item">
-							<div class="quick-view-btn">
+							<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 								<span class="qv"></span>Быстрый просмотр
 							</div>
 							<div class="catalog-item-img">
@@ -385,7 +385,7 @@
 
 					<div class="line">
 						<div class="catalog-item">
-							<div class="quick-view-btn">
+							<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 								<span class="qv"></span>Быстрый просмотр
 							</div>
 							<div class="catalog-item-img">
@@ -423,7 +423,7 @@
 						<div class="catalog-sep"></div>
 
 						<div class="catalog-item">
-							<div class="quick-view-btn">
+							<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 								<span class="qv"></span>Быстрый просмотр
 							</div>
 							<div class="catalog-item-img">
@@ -461,7 +461,7 @@
 						<div class="catalog-sep"></div>
 
 						<div class="catalog-item">
-							<div class="quick-view-btn">
+							<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 								<span class="qv"></span>Быстрый просмотр
 							</div>
 							<div class="catalog-item-img">
@@ -508,7 +508,7 @@
 						<a href="" class="page">3</a>
 						<a href="" class="page">Следующая</a>
 					</div>
-					<div class="fright"><a href="" class="top-page">Наверх</a></div>
+					<div class="fright"><a href="" class="top-page s-scroll" data-scroll="top">Наверх</a></div>
 				</div>
 
 			</div>
@@ -527,5 +527,3 @@
 </div>
 
 //= includes/_footer.html
-
-//= includes/_catalog_quickview_layer.html
