--- a/templates/includes/_card_recently.html
+++ b/templates/includes/_card_recently.html
@@ -3,7 +3,7 @@
         <h3 class="mb20">Рекомендуем вам</h3>
         <div class="float-cont">
             <div class="catalog-item">
-                <div class="quick-view-btn">
+                <div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
                     <span class="qv"></span>Быстрый просмотр
                 </div>
                 <div class="catalog-item-img">
@@ -35,7 +35,7 @@
             <div class="catalog-sep"></div>
 
             <div class="catalog-item">
-                <div class="quick-view-btn">
+                <div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
                     <span class="qv"></span>Быстрый просмотр
                 </div>
                 <div class="catalog-item-img">
@@ -67,7 +67,7 @@
             <div class="catalog-sep"></div>
 
             <div class="catalog-item">
-                <div class="quick-view-btn">
+                <div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
                     <span class="qv"></span>Быстрый просмотр
                 </div>
                 <div class="catalog-item-img">
@@ -99,7 +99,7 @@
             <div class="catalog-sep"></div>
 
             <div class="catalog-item">
-                <div class="quick-view-btn">
+                <div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
                     <span class="qv"></span>Быстрый просмотр
                 </div>
                 <div class="catalog-item-img">
