--- a/templates/includes/_card_recently_not_avaliable.html
+++ b/templates/includes/_card_recently_not_avaliable.html
@@ -4,7 +4,7 @@
         <h3 class="mb20">Похожие товары</h3>
         <div class="float-cont">
             <div class="catalog-item">
-                <div class="quick-view-btn">
+                <div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
                     <span class="qv"></span>Быстрый просмотр
                 </div>
                 <div class="catalog-item-img">
@@ -36,7 +36,7 @@
             <div class="catalog-sep"></div>
 
             <div class="catalog-item">
-                <div class="quick-view-btn">
+                <div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
                     <span class="qv"></span>Быстрый просмотр
                 </div>
                 <div class="catalog-item-img">
@@ -68,7 +68,7 @@
             <div class="catalog-sep"></div>
 
             <div class="catalog-item">
-                <div class="quick-view-btn">
+                <div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
                     <span class="qv"></span>Быстрый просмотр
                 </div>
                 <div class="catalog-item-img">
@@ -100,7 +100,7 @@
             <div class="catalog-sep"></div>
 
             <div class="catalog-item">
-                <div class="quick-view-btn">
+                <div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
                     <span class="qv"></span>Быстрый просмотр
                 </div>
                 <div class="catalog-item-img">
