--- a/templates/includes/_catalog-item.html
+++ b/templates/includes/_catalog-item.html
@@ -1,5 +1,5 @@
 <div class="catalog-item">
-    <div class="quick-view-btn">
+    <div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
         <span class="qv"></span>Быстрый просмотр
     </div>
     <div class="catalog-item-img">
@@ -18,7 +18,13 @@
         </div>
         <div class="catalog-item-count">
             <div class="fs11">Кол-во</div>
-            <input type="text" class="qty" value="1" maxlength="3" />
+            <select class="select2">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+            </select>
         </div>
     </div>
     <div class="btn-cont"><a href="" class="btn">Купить</a></div>
