--- a/templates/index.html
+++ b/templates/index.html
@@ -178,7 +178,7 @@
 	<div class="s-tabs-boxes" data-tabs="main">
 		<div class="tab-box tab-box_top selected float-cont">
 			<div class="catalog-item">
-				<div class="quick-view-btn">
+				<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 					<span class="qv"></span>Быстрый просмотр
 				</div>
 				<div class="catalog-item-img">
@@ -210,7 +210,7 @@
 			<div class="catalog-sep"></div>
 
 			<div class="catalog-item">
-				<div class="quick-view-btn">
+				<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 					<span class="qv"></span>Быстрый просмотр
 				</div>
 				<div class="catalog-item-img">
@@ -242,7 +242,7 @@
 			<div class="catalog-sep"></div>
 
 			<div class="catalog-item">
-				<div class="quick-view-btn">
+				<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 					<span class="qv"></span>Быстрый просмотр
 				</div>
 				<div class="catalog-item-img">
@@ -274,7 +274,7 @@
 			<div class="catalog-sep"></div>
 
 			<div class="catalog-item">
-				<div class="quick-view-btn">
+				<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 					<span class="qv"></span>Быстрый просмотр
 				</div>
 				<div class="catalog-item-img">
