--- a/templates/index_login.html
+++ b/templates/index_login.html
@@ -84,7 +84,7 @@
 	<div class="s-tabs-boxes" data-tabs="main">
 		<div class="tab-box tab-box_top selected float-cont">
 			<div class="catalog-item">
-				<div class="quick-view-btn">
+				<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 					<span class="qv"></span>Быстрый просмотр
 				</div>
 				<div class="catalog-item-img">
@@ -122,7 +122,7 @@
 			<div class="catalog-sep"></div>
 
 			<div class="catalog-item">
-				<div class="quick-view-btn">
+				<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 					<span class="qv"></span>Быстрый просмотр
 				</div>
 				<div class="catalog-item-img">
@@ -160,7 +160,7 @@
 			<div class="catalog-sep"></div>
 
 			<div class="catalog-item">
-				<div class="quick-view-btn">
+				<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 					<span class="qv"></span>Быстрый просмотр
 				</div>
 				<div class="catalog-item-img">
@@ -198,7 +198,7 @@
 			<div class="catalog-sep"></div>
 
 			<div class="catalog-item">
-				<div class="quick-view-btn">
+				<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 					<span class="qv"></span>Быстрый просмотр
 				</div>
 				<div class="catalog-item-img">
