--- a/templates/ordering.html
+++ b/templates/ordering.html
@@ -91,10 +91,10 @@
                         </div>
                     </div>
                     <p class="semibold mb15">Дата и время доставки:</p>
-                    <div class="form form_group form_group_full">
-                        <div class="form_inline form_group_x-medium">
+                    <div class="form form_group_full">
+                        <div class="form_inline form_inline_middle form_group form_group_x-medium">
                             <label for="date" class="form_label">Дата:</label>
-                            <input type="text" id="date" class="form_text date" value="04/10/2015" data-dependent="date" disabled/>
+                            <input type="text" id="date" class="form_text date s-date" value="04/10/2015" data-dependent="date" disabled/>
                         </div>
                         <label for="soon" class="form_checkbox"><input type="checkbox" id="soon" class="s-depend" data-depend="date" checked /><i></i>Как можно раньше</label>
                     </div>
