--- a/templates/ordering_success.html
+++ b/templates/ordering_success.html
@@ -40,7 +40,7 @@
                 <input type="text" id="phone" class="form_text phone-mask" placeholder="+7"  />
             </div>
             <div class="form_group_full">
-                <div class="form_inline form_group">
+                <div class="form_inline form_inline_middle form_group">
                     <label for="password" class="form_label">Придумайте пароль:</label>
                     <input type="password" id="password" class="form_text s-password" data-password="ordering" />
                 </div>
