--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -115,7 +115,7 @@
 					<div class="p20 float-cont">
 						<div class="line">
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -153,7 +153,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -191,7 +191,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -229,7 +229,7 @@
 
 						<div class="line">
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -267,7 +267,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -305,7 +305,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -343,7 +343,7 @@
 
 						<div class="line">
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -381,7 +381,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -419,7 +419,7 @@
 							<div class="catalog-sep"></div>
 
 							<div class="catalog-item">
-								<div class="quick-view-btn">
+								<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview">
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
@@ -466,7 +466,7 @@
 							<a href="" class="page">3</a>
 							<a href="" class="page">Следующая</a>
 						</div>
-						<div class="fright"><a href="" class="top-page">Наверх</a></div>
+						<div class="fright"><a href="" class="top-page s-scroll" data-scroll="top">Наверх</a></div>
 					</div>
 				</div>
 			</div>
