--- a/templates/shopping-chart.html
+++ b/templates/shopping-chart.html
@@ -15,7 +15,7 @@
                         <p class="number">220 бонусов</p>
                         <p>1 бонус = 1 рубль</p>
                     </div>
-                    <div class="chart_aside_auth">Чтобы получить бонусы <a href="#" class="blue">войдите в аккаунт</a> или <a href="#" class="blue">зарегистрируйтесь</a>.</div>
+                    <div class="chart_aside_auth">Чтобы получить бонусы <a href="#layer-login" class="blue fancybox">войдите в аккаунт</a> или <a href="#layer-reg" class="blue fancybox">зарегистрируйтесь</a>.</div>
                     <div class="chart_aside_bonus">
                         <p class="text">Бонусы можно накапливать или расплачиваться ими.</p>
                         <a href="#" class="blue">Подробнее о бонусах</a>
@@ -165,3 +165,5 @@
 </div>
 
 //= includes/_footer.html
+
+//= includes/_log_reg_layers.html
