--- a/static/css/rateit.css
+++ b/static/css/rateit.css
@@ -9,6 +9,7 @@
     -ms-user-select: none;
     user-select: none;
     -webkit-touch-callout: none;
+    cursor: pointer;
 }
 
 .rateit .rateit-range
