--- a/static/scss/_filters.scss
+++ b/static/scss/_filters.scss
@@ -107,7 +107,7 @@ a.inner-border {
 }
 .filter-content li:last-child .inner-border {
   border-bottom: none;
-  padding-bottom: 22px;
+  padding-bottom: 17px;
 }
 .filter-btn {
   background-color: $color-bg-grey;
@@ -199,6 +199,7 @@ a.inner-border {
   }
   &.current {
     background: none;
+    filter: none;
   }
 }
 .filter-simple_option {
