--- a/static/scss/_header.scss
+++ b/static/scss/_header.scss
@@ -10,6 +10,7 @@
   color: $color-white;
   margin-bottom: 22px;
   box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  overflow: hidden;
 }
 .menu .width {
   padding-left: 0;
