--- a/static/scss/_mixins.scss
+++ b/static/scss/_mixins.scss
@@ -28,5 +28,5 @@
   background: -o-linear-gradient(top,  $top 0%,$bottom 100%); /* Opera 11.10+ */
   background: -ms-linear-gradient(top,  $top 0%,$bottom 100%); /* IE10+ */
   background: linear-gradient(to bottom,  $top 0%,$bottom 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$top', endColorstr='$bottom',GradientType=0 ); /* IE6-9 */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$top}', endColorstr='#{$bottom}',GradientType=0 ); /* IE6-9 */
 }
