--- a/templates/card.html
+++ b/templates/card.html
@@ -1,8 +1,8 @@
 //= includes/_header.html
 
 	<div class="width">
-		<div class="breadcrumb-cont">
-			<div class="breadcrumb mb0">
+		<div class="float-cont breadcrumb-cont">
+			<div class="breadcrumb fleft mb0">
 				<a href="" class="bread">Главная</a><span class="sep">/</span>
 				<a href="" class="bread">Собаки</a><span class="sep">/</span>
 				<a href="" class="bread">Сухой корм</a><span class="sep">/</span>
@@ -66,7 +66,5 @@
 
 
 //= includes/_footer.html
-
-//= includes/_card_layers.html
 
 //= includes/_log_reg_layers.html
